--- a/theme/common.less
+++ b/theme/common.less
@@ -438,7 +438,6 @@ div.simframe > iframe {
     flex-shrink: 0;
 
     ul.common-menu-dropdown-pane {
-        overflow-y: auto;
         max-height: calc(100vh - @mainMenuHeight);
     }
 
